--- a/PTIAppRest/Pages/RequestDetailPage.xaml
+++ b/PTIAppRest/Pages/RequestDetailPage.xaml
@@ -1,19 +1,22 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="PTIAppRest.RequestDetailPage" Title="Detalle Solicitud">
+<ContentPage 	xmlns="http://xamarin.com/schemas/2014/forms" 
+				xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+				x:Class="PTIAppRest.RequestDetailPage" 
+				Title="Detalle Solicitud"
+				>
 	<ContentPage.Content>
 		    <ScrollView>
 
-		 <StackLayout  Padding="10,0,10,10">			
-		 <Grid BackgroundColor="Navy" >
-		  <Label FontSize="16" HorizontalOptions="Center">
+		 <StackLayout  Padding="10,0,10,10">					
+		  <Label FontSize="11">
         <Label.FormattedText>
           <FormattedString>
-            <Span Text=""  ForegroundColor="White" FontAttributes="Bold" />
-            <Span  x:Name="companiaLabel" ForegroundColor="White" FontAttributes="Bold"/>       
+            <Span Text=""  ForegroundColor="Black" FontAttributes="Bold" />
+            <Span  x:Name="companiaLabel" ForegroundColor="Black" FontAttributes="Bold"/>       
           </FormattedString>
         </Label.FormattedText>
         </Label>
-		 </Grid>					
+						
 				
 	 <Label FontSize="11">
         <Label.FormattedText>
